syntax = "proto3";

option go_package = "https://github.com/kartikaysaxena/go-microservice/proto";

service RateModifier {
  rpc RateLimiter(RateRequest) returns(RateResponse);
}

message RateRequest {
  float rateLimit = 1;
  float minutes = 2;
}

message RateResponse {
  float count = 1;
}